# tactics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md
cmake/: CerebraConfig.cmake.in  UseCerebra.cmake.in
include/: cbMainWindow.h  cbProgressBar.h  qvtkViewToolCursorWidget.h  vtkDICOMConfig.h  vtkGViewFrame.h  vtkHViewFrame.h  vtkNIFTIWriter.h  vtkViewObjectCollection.h  vtkViewPane.h  vtkViewToolCursorInteractorObserver.h
resources/: Tactics.icns
share/: 3387S-40.txt  3389S-40.txt  3391S-40.txt  6142.txt  6146.txt  AD04R-SP10X-000.txt  AD08R-SP05X-000.txt  CIPAC.txt  MD01R-SP00X-000.txt  PiscesQuad-3487A.txt  RD05R-SP35X-000.txt  RD06R-SP05X-000.txt  RD08R-SP04X-000.txt  RD08R-SP05X-000.txt  RD10R-SP04X-000.txt  RD10R-SP05X-000.txt  RD10R-SP06X-000.txt  RD10R-SP07X-000.txt  RD10R-SP08X-000.txt  RD10R-SP35X-000.txt  RD12R-SP05X-000.txt  RD12R-SP08X-000.txt  RD14R-SP03X-000.txt  RD14R-SP04X-000.txt  RD14R-SP05X-000.txt  RD14R-SP06X-000.txt  RD14R-SP07X-000.txt  RD14R-SP08X-000.txt  RD14R-SP09X-000.txt  RD14R-SP10X-000.txt  RD14R-SP35X-000.txt  SD10R-SP05X-000.txt  SD12R-SP05X-000.txt
src/: CMakeLists.txt  LeksellFiducial.h  cbElectrodeController.cxx  cbElectrodeController.h  cbElectrodeIntroductionStage.cxx  cbElectrodeIntroductionStage.h  cbElectrodeOpenStage.cxx  cbElectrodeOpenStage.h  cbElectrodePlanStage.cxx  cbElectrodePlanStage.h  cbElectrodeToolBarWidget.cxx  cbElectrodeToolBarWidget.h  cbElectrodeView.cxx  cbElectrodeView.h  cbProbe.cxx  cbProbe.h  cbProbeCatalogue.cxx  cbProbeSpecification.h  main.cxx
src/data/: CMakeLists.txt  vtkDataManager.cxx  vtkDataManager.h  vtkDataManagerDefaultKeys.cxx  vtkDataManagerDefaultKeys.h  vtkDataNode.cxx  vtkDataNode.h  vtkFrameOfReference.cxx  vtkFrameOfReference.h  vtkImageNode.cxx  vtkImageNode.h  vtkSurfaceNode.cxx  vtkSurfaceNode.h
src/dicom/: CMakeLists.txt  vtkDICOMConfig.h  vtkDICOMFileSorter.cxx  vtkNIFTIReader.h
src/gui/: CMakeLists.txt  cbApplicationController.cxx  cbApplicationController.h  cbMainWindow.cxx  cbMainWindow.h  cbProgressBar.cxx  cbQtDicomDirDialog.cxx  cbQtDicomDirDialog.h  cbQtDicomDirModel.cxx  cbQtDicomDirModel.h  cbQtDicomDirThread.cxx  cbQtDicomDirThread.h  cbQtDicomDirView.cxx  cbQtDicomDirView.h  cbQtVTKOutputWindow.cxx  cbQtVTKOutputWindow.h  cbStage.cxx  cbStage.h  cbStageManager.cxx  cbStageManager.h  qvtkViewToolCursorWidget.cxx  qvtkViewToolCursorWidget.h
src/processing/: CMakeLists.txt  cbMRIRegistration.cxx  cbMRIRegistration.h
src/tactics/: CMakeLists.txt  LeksellFiducial.h  cbElectrodeAutomator.h  cbElectrodeController.cxx  cbElectrodeController.h  cbElectrodeIntroductionStage.cxx  cbElectrodeIntroductionStage.h  cbElectrodeOpenStage.cxx  cbElectrodeOpenStage.h  cbElectrodePlanStage.cxx  cbElectrodePlanStage.h  cbElectrodeToolBarWidget.cxx  cbElectrodeToolBarWidget.h  cbElectrodeView.cxx  cbElectrodeView.h  cbProbe.h  cbProbeCatalogue.h  cbProbeSpecification.cxx  main.cxx
src/view/: CMakeLists.txt  perfusionmain.h  vtkDummyViewPane.cxx  vtkDummyViewPane.h  vtkDynamicViewFrame.cxx  vtkDynamicViewFrame.h  vtkGViewFrame.cxx  vtkGViewFrame.h  vtkHViewFrame.cxx  vtkHViewFrame.h  vtkImageViewPane.cxx  vtkImageViewPane.h  vtkVViewFrame.cxx  vtkVViewFrame.h  vtkViewFrame.cxx  vtkViewFrame.h  vtkViewObject.cxx  vtkViewObject.h  vtkViewObjectCollection.cxx  vtkViewPane.cxx  vtkViewRect.cxx  vtkViewRect.h  vtkViewToolCursorInteractorObserver.cxx
test/: CMakeLists.txt  TestData.h.in  TestDriver.cxx  TestElectrodeView.cxx  TestProbe.cxx  TestProbeCatalogue.cxx  TestProbeSpecification.cxx  UnitTest++.h  main.cc  main.cxx  sanity_check.cc  test.h
